feat: add count display on the main page

--- a/src/index.html
+++ b/src/index.html
@@ -46,8 +46,9 @@
                     <div class="content__control">
                         <div class="content__control__sort">Выпадающий список с опциями</div>
                         <div class="content__control__count">
-                            <div class="content__control__count__text">Count</div>
-                            <div class="content__control__count__value"></div>
+                            <div class="content__control__count__text">Count: 
+                                <span class="content__control__count__value"></span>
+                            </div>
                         </div>
                         <div class="content__control__found">Здесь будет поиск</div>
                         <div class="content__control__layout">Раскладка</div>
