feat: finish search and layout features, update dependecies in ts project files and webpack

--- a/src/index.html
+++ b/src/index.html
@@ -56,11 +56,16 @@
                                 <span class="content__control__count__value"></span>
                             </div>
                         </div>
-                        <div class="content__control__found">Здесь будет поиск</div>
-                        <div class="content__control__layout">Раскладка</div>
+                        <div class="content__control__found"><input type="text" name="search" id="search" placeholder="  🔎︎    "></div>
+                        <div class="content__control__layout">
+                            <label class="content__control__layout__switch" for="content__control__layout_checkbox">Small Icons</label>
+                            <input type="checkbox" id="content__control__layout_checkbox">
+                        </div>
                     </div>
-                    <div class="content__products" id="content__products">
-                        
+                    <div class="content__products__wrapper">
+                        <div class="content__products large" id="content__products">
+                            
+                        </div>
                     </div>
                 </div>
             </main>
