feat: implemented block for entering personal information with validation and bank card data entry block with validation

--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,7 @@
                         <div class="filters__stock__name">Stock</div>
                         <div class="filters__stock__values"></div>
                     </div>
+                    <div class="button button_buy">Buy now</div>
                 </div>
                 <div class="content">
                     <div class="content__control">
@@ -63,6 +64,7 @@
                 <div class="info__year">2022</div>
                 <a class="rsshool" href="https://rs.school/js/">RSSCOOL</a>
             </footer>
+            <div class="dark-background"></div>
         </div>
     </body>
 </html>
