feat: add functions to remove some query parameters and remove all query parameters

--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,8 @@
             <main class="main" id="main">
                 <div class="filters">
                     <div class="filters__options filters__control">
-                        <div class="filters__control__name">Control</div>
-                        <div class="filters__control__values"></div>
+                        <div class="button filters__control__reset" id="filters__control__reset">Reset All</div>
+                        <div class="button filters__control__copy">Copy Link</div>
                     </div>
                     <div class="filters__options filters__category">
                         <div class="filters__category__name">Category</div>
