--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,8 @@
             <main class="main" id="main">
                 <div class="filters">
                     <div class="filters__options filters__control">
-                        <div class="button filters__control__reset" id="filters__control__reset">Clear Filters</div>
-                        <div class="button filters__control__copy" id="filters__control__copy">Copy Link</div>
+                        <div class="button button_filters filters__control__reset" id="filters__control__reset">Clear Filters</div>
+                        <div class="button button_filters filters__control__copy" id="filters__control__copy">Copy Link</div>
                     </div>
                     <div class="filters__options filters__category">
                         <div class="filters__category__name">Category</div>
@@ -69,6 +69,28 @@
                     </div>
                 </div>
             </main>
+            <section class="goods__details" id="goods__details">
+                <div class="goods__details__wrapper">
+                    <div class="goods__details__breadcrumbs">
+                        <span class="goods__details__breadcrumb0" id="goods__details__breadcrumb0"></span>
+                        <span class="goods__details__breadcrumb1" id="goods__details__breadcrumb1"></span>
+                        <span class="goods__details__breadcrumb2" id="goods__details__breadcrumb2"></span>
+                        <span class="goods__details__breadcrumb3" id="goods__details__breadcrumb3"></span>
+                    </div>
+                    <div class="goods__details__product">
+                        <div class="goods__details__product__header" id="goods__details__product__header"></div>
+                        <div class="goods__details__product__body" id="goods__details__product__body">
+                            <div class="goods__details__product__minipics" id="goods__details__product__minipics"></div>
+                            <div class="goods__details__product__info">
+                                <div class="goods__details__product__info0">MEOW</div>
+                                <div class="goods__details__product__info1"></div>
+                                <div class="goods__details__product__info2"></div>
+                            </div>
+                            
+                        </div>
+                    </div>
+                </div>
+            </section>
             <footer class="footer"> 
                 <a class="github" href="https://github.com/olya-full">Гитхаб1</a>
                 <a class="github" href="https://github.com/Florence100">Гитхаб2</a>
