feat: finish goods description pages except adding to cart

--- a/src/index.html
+++ b/src/index.html
@@ -72,30 +72,31 @@
             <section class="goods__details" id="goods__details">
                 <div class="goods__details__wrapper">
                     <div class="goods__details__breadcrumbs">
-                        <span class="goods__details__breadcrumb0" id="goods__details__breadcrumb0"></span>
-                        <span class="goods__details__breadcrumb1" id="goods__details__breadcrumb1"></span>
-                        <span class="goods__details__breadcrumb2" id="goods__details__breadcrumb2"></span>
-                        <span class="goods__details__breadcrumb3" id="goods__details__breadcrumb3"></span>
+                        <span class="goods__details__breadcrumb" id="goods__details__breadcrumb0"></span><span>/</span>
+                        <span class="goods__details__breadcrumb" id="goods__details__breadcrumb1"></span><span>/</span>
+                        <span class="goods__details__breadcrumb" id="goods__details__breadcrumb2"></span><span>/</span>
+                        <span class="goods__details__breadcrumb" id="goods__details__breadcrumb3"></span>
                     </div>
                     <div class="goods__details__product">
-                        <div class="goods__details__product__header" id="goods__details__product__header"></div>
-                        <div class="goods__details__product__body" id="goods__details__product__body">
-                            <div class="goods__details__product__minipics" id="goods__details__product__minipics"></div>
-                            <div class="goods__details__product__info">
-                                <div class="goods__details__product__info0">MEOW</div>
-                                <div class="goods__details__product__info1"></div>
-                                <div class="goods__details__product__info2"></div>
+                        <div class="goods__details__product_wrapper">
+                            <div class="goods__details__product__header" id="goods__details__product__header"></div>
+                            <div class="goods__details__product__body" id="goods__details__product__body">
+                                <div class="goods__details__product__minipicswrapper" id="goods__details__product__minipicswrapper"></div>
+                                <div class="goods__details__product__info">
+                                    <div class="goods__details__product__info0" id="goods__details__product__info0"></div>
+                                    <div class="goods__details__product__info1" id="goods__details__product__info1"></div>
+                                    <div class="goods__details__product__info2" id="goods__details__product__info2"></div>
+                                </div>
                             </div>
-                            
                         </div>
                     </div>
                 </div>
             </section>
             <footer class="footer"> 
-                <a class="github" href="https://github.com/olya-full">Гитхаб1</a>
-                <a class="github" href="https://github.com/Florence100">Гитхаб2</a>
+                <a class="github" href="https://github.com/olya-full"></a>
+                <a class="github" href="https://github.com/Florence100"></a>
                 <div class="info__year">2022</div>
-                <a class="rsshool" href="https://rs.school/js/">RSSCHOOL</a>
+                <a class="rsshool" href="https://rs.school/js/"></a>
             </footer>
             <div class="dark-background"></div>
         </div>
