feat: create stock and price filters

--- a/src/index.html
+++ b/src/index.html
@@ -33,12 +33,25 @@
                     </div>
                     <div class="filters__options filters__price">
                         <div class="filters__price__name">Price</div>
-                        <div class="filters__price__values"></div>
+                        <div class="filters__price__container">
+                            <div class="range_container slider-snap-price"></div>
+                            <div class="filters__snap__container">
+                                <div id="slider-snap-value-lower" class="slider-snap-value-lower"></div>
+                                <div id="slider-snap-value-upper" class="slider-snap-value-upper"></div>
+                            </div>
+                        </div>
                     </div>
                     <div class="filters__options filters__stock">
                         <div class="filters__stock__name">Stock</div>
-                        <div class="filters__stock__values"></div>
+                        <div class="filters__stock__container">
+                            <div class="range_container slider-snap-stock"></div>
+                            <div class="filters__snap__container">
+                                <div id="slider-snap-value-lower" class="slider-snap-value-lower"></div>
+                                <div id="slider-snap-value-upper" class="slider-snap-value-upper"></div>
+                            </div>
+                        </div>
                     </div>
+                    
                     <div class="button button_buy">Buy now</div>
                 </div>
                 <div class="content">
