feat: do design work and bugfix

--- a/src/index.html
+++ b/src/index.html
@@ -5,18 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online store</title>
+    <link rel="icon" type="image/jpg" href="https://liderdver.ru/catalog/view/theme/theme377/image/icons/shopping-cart.svg">
 </head>
     <body class="body">
         <div class="wrapper">
             <header class="header">
-                <div class="logo">Наш логотип</div>
+                <div class="logo"></div>
                 <div class="total-card">
                     <div class="total-card__text">Cart total:</div>
                     <div class="total-card__value"></div>
                 </div>
                 <div class="basket">
                     <div class="basket__img"></div>
-                    <div class="basket__value">Корзина</div>
+                    <div class="basket__value">16</div>
                 </div>
             </header>
             <main class="main" id="main">
@@ -57,11 +58,11 @@
                 <div class="content">
                     <div class="content__control">
                         <select class="content__control__sort" id="main_sort" name="main_sort">
-                            <option id="control_sort" value="Sort" disabled selected>Sort</option>
-                            <option id="control_priceup" value="PriceUp">Price ▲</option>
-                            <option id="control_pricedown" value="PriceDown">Price ▼</option>
-                            <option id="control_ratingup" value="RatingUp">Rating ▲</option>
-                            <option id="control_ratingdown" value="RatingDown">Rating ▼</option>
+                            <option id="control_sort" value="Sort" disabled selected>Sort &nbsp ⇩</option>
+                            <option id="control_priceup" value="PriceUp">Price &nbsp &nbsp &nbsp  ▲</option>
+                            <option id="control_pricedown" value="PriceDown">Price &nbsp &nbsp &nbsp  ▼</option>
+                            <option id="control_ratingup" value="RatingUp">Rating &nbsp &nbsp ▲</option>
+                            <option id="control_ratingdown" value="RatingDown">Rating &nbsp &nbsp ▼</option>
                         </select>
                         <div class="content__control__count">
                             <div class="content__control__count__text">Count: 
