feat: displaying items in the shopping cart

--- a/src/index.html
+++ b/src/index.html
@@ -120,6 +120,7 @@
                             <div class="cart__page__next">></div>
                         </div>
                     </div>
+                    <div class="cart__items"></div>
                 </div>
                 <div class="cart__summary">
                     <div class="cart__title">Summary</div>
