feat: add and remove products through the cart, display products in the header

--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,11 @@
                 <div class="logo"></div>
                 <div class="total-card">
                     <div class="total-card__text">Cart total:</div>
-                    <div class="total-card__value"></div>
+                    <div class="total-card__value">0</div>
                 </div>
                 <div class="basket">
                     <div class="basket__img"></div>
-                    <div class="basket__value">16</div>
+                    <div class="basket__value">0</div>
                 </div>
             </header>
             <main class="main" id="main">
