fix: correct interaction between filtering and sorting

--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,7 @@
                         <div class="cart__text">Products In Cart</div>
                         <label class="cart__limit">
                             Limit
-                            <input type="number" name="limit" min="1" step="1" value="1"></input>
+                            <input type="number" name="limit" min="1" max="5" step="1" value="1"></input>
                         </label>
                         <div class="cart__page">
                             <div class="cart__page__back"><</div>
