--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
             <header class="header">
                 <div class="logo"></div>
                 <div class="total-card">
-                    <div class="total-card__text">Cart total:</div>
+                    <div class="total-card__text">Cart total: €&nbsp</div>
                     <div class="total-card__value">0</div>
                 </div>
                 <div class="basket">
@@ -115,9 +115,9 @@
                             <input type="number" name="limit" min="1" max="5" step="1" value="1"></input>
                         </label>
                         <div class="cart__page">
-                            <div class="cart__page__back"><</div>
+                            <div class="cart__page__back">◁</div>
                             <div class="cart__page__value">1</div>
-                            <div class="cart__page__next">></div>
+                            <div class="cart__page__next">▷</div>
                         </div>
                     </div>
                     <div class="cart__items"></div>
