--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
                         </div>
                     </div>
                     
-                    <div class="button button_buy">Buy now</div>
+                    <!-- <div class="button button_buy">Buy now</div> -->
                 </div>
                 <div class="content">
                     <div class="content__control">
@@ -123,7 +123,20 @@
                     <div class="cart__items"></div>
                 </div>
                 <div class="cart__summary">
-                    <div class="cart__title">Summary</div>
+                    <div class="cart__summary__wrapper">
+                        <div class="cart__title">Summary</div>
+                        <div class="cart__summary__box">
+                            <div class="cart__summary__count">Products:</div>
+                            <div class="cart__summary__count__value"></div>
+                        </div>
+                        <div class="cart__summary__box">
+                            <div class="cart__summary__total">Total: €&nbsp</div>
+                            <div class="cart__summary__total__value"></div>
+                        </div>
+                        <input type="text" class="cart__summary__promo form__input" name="promo" placeholder="Enter promo code">
+                        <div class="cart__summary__promo-test">Promo for test: 'OLYA', 'NASTYA'</div>
+                    </div>
+                    <div class="button button_buy">Buy now</div>
                 </div>
                 <div class="cart__empty">Cart is Empty</div>
             </section>
