feat: finish pagination and instant purchase of a product

--- a/src/index.html
+++ b/src/index.html
@@ -112,12 +112,12 @@
                         <div class="cart__text">Products In Cart</div>
                         <label class="cart__limit">
                             Limit
-                            <input type="number" name="limit" min="1" max="5" step="1" value="1"></input>
+                            <input id="cart__limit__input" type="number" name="limit" min="1" step="1"></input>
                         </label>
                         <div class="cart__page">
-                            <div class="cart__page__back">◁</div>
-                            <div class="cart__page__value">1</div>
-                            <div class="cart__page__next">▷</div>
+                            <div id="cart__page__back" class="cart__page__back">◁</div>
+                            <div id="cart__page__value" class="cart__page__value"></div>
+                            <div id="cart__page__next" class="cart__page__next">▷</div>
                         </div>
                     </div>
                     <div class="cart__items"></div>
