feat: release adding promo codes

--- a/src/index.html
+++ b/src/index.html
@@ -130,10 +130,15 @@
                             <div class="cart__summary__count__value"></div>
                         </div>
                         <div class="cart__summary__box">
-                            <div class="cart__summary__total">Total: €&nbsp</div>
+                            <div class="cart__summary__total">Total:</div>
                             <div class="cart__summary__total__value"></div>
                         </div>
+                        <div class="cart__summary__box cart__summary__box__discount">
+                            <div class="cart__summary__total__discount"></div>
+                        </div>
+                        <div class="cart__summary__promo-applay-box"></div>
                         <input type="text" class="cart__summary__promo form__input" name="promo" placeholder="Enter promo code">
+                        <div class="cart__summary__promo-box"></div>
                         <div class="cart__summary__promo-test">Promo for test: 'OLYA', 'NASTYA'</div>
                     </div>
                     <div class="button button_buy">Buy now</div>
