feat: finish styles, all functions, do some bugfix

--- a/src/404.html
+++ b/src/404.html
@@ -8,10 +8,24 @@
     <link rel="icon" type="image/jpg" href="https://liderdver.ru/catalog/view/theme/theme377/image/icons/shopping-cart.svg">
 </head>
 <body class="body">
-  <div>
-    Unfortunately, the page you're trying to access is not available (Error 404).
-  </div>
-  <div>
-    If this is not what you expected, please <a href="https://florence100-olya-full-online-store.netlify.app">click here</a> and go back to the main page.
-  </div>
+    <header class="header">
+      <div class="logo"></div>
+      <div class="basket">
+          <div class="basket__img"></div>
+      </div>
+    </header>
+    <main class="main_404">
+       <div>
+        Unfortunately, the page you're trying to access is not available (Error 404).
+        </div>
+      <div>
+        If this is not what you expected, please <a href="https://florence100-olya-full-online-store.netlify.app">click here</a> and go back to the main page.
+      </div>
+    </main>
+    <footer class="footer"> 
+      <a class="github" href="https://github.com/olya-full"></a>
+      <a class="github" href="https://github.com/Florence100"></a>
+      <div class="info__year">2022</div>
+      <a class="rsshool" href="https://rs.school/js/"></a>
+    </footer>
 </body>
