--- a/src/404.html
+++ b/src/404.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online store</title>
     <link rel="icon" type="image/jpg" href="https://liderdver.ru/catalog/view/theme/theme377/image/icons/shopping-cart.svg">
+    <link href="index.3ad6fc6a8b0c0e977e3e.css" rel="stylesheet">
 </head>
 <body class="body">
     <header class="header">
@@ -19,7 +20,7 @@
         Unfortunately, the page you're trying to access is not available (Error 404).
         </div>
       <div>
-        If this is not what you expected, please <a href="https://florence100-olya-full-online-store.netlify.app">click here</a> and go back to the main page.
+        If this is not what you expected, please <strong><a href="https://florence100-olya-full-online-store.netlify.app">click here</a></strong> and go back to the main page.
       </div>
     </main>
     <footer class="footer"> 
